# WITPAE_Theater_Staff

./: .gitignore  ANTIPATTERNS.md  CHANGELOG.md  README.md  WITPAE_Theater_Staff.sln  _check_snapshot.py  _compare_scrape_outputs.py  build.bat  build.ps1  pyproject.toml  requirements.txt  run_gui.bat  run_ui.bat  run_ui.ps1  run_ui_dev.bat  run_ui_dev.ps1
.github/: copilot-instructions.md
.github/workflows/: ci.yml
app/: logging_setup.py  main.py  main_window.py  map_assembly.py  regions_overlay.py  runtime_scraper.py
docs/: technology-comparison.md
src/WitpaeTheaterStaff/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  WitpaeTheaterStaff.csproj
src/WitpaeTheaterStaff/Config/: AppSettings.cs  SettingsWindow.xaml  SettingsWindow.xaml.cs
src/WitpaeTheaterStaff/Data/: GameDataScraper.cs  TurnWatcher.cs
src/WitpaeTheaterStaff/DllInterface/: GameEnums.cs  PwsDll.cs  PwsDllStructs.cs
src/WitpaeTheaterStaff/UI/: CoordinateTransform.cs  DetailPanel.xaml  DetailPanel.xaml.cs  HexTooltip.cs  MapAssembly.cs  OverlayBuilder.cs
src/witpae_theater_staff/: __init__.py  hex_utils.py  main.py
src/witpae_theater_staff/config/: settings.py
src/witpae_theater_staff/data/: models.py  scraper.py  turn_watcher.py
src/witpae_theater_staff/dll/: __init__.py
src/witpae_theater_staff/dll_interface/: __init__.py  pwsdll.py
src/witpae_theater_staff/map/: __init__.py  game_coords.py
tests/: test_game_coords.py
tests/WitpaeTheaterStaff.Tests/: CoordinateTransformTests.cs  GameDataModelsTests.cs  GameEnumsTests.cs  WitpaeTheaterStaff.Tests.csproj
(+11 files in other folders)
